notebook file has linearized formulas now

--- a/pendulumFormulas.ipynb
+++ b/pendulumFormulas.ipynb
@@ -73,13 +73,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sp\n",
+    "from sympy import init_printing\n",
+    "from IPython.display import Math, display\n",
+    "from sympy.physics.vector import dynamicsymbols\n",
+    "from sympy.physics.vector.printing import vpprint, vlatex\n",
+    "init_printing(use_latex=True)\n",
+    "\n",
+    "# importing these functions directly to make life a little easier and code a little more readable\n",
+    "from sympy import sin, cos, diff, Matrix, zeros, symbols, Function, pretty_print, simplify, init_printing, latex\n",
+    "\n",
+    "t, m1, m2, ell, g, F, b = symbols('t, m1, m2, ell, g, F, b')\n",
+    "theta = sp.Function('theta')(t)\n",
+    "z = sp.Function('z')(t)\n",
+    "thetadot = diff(theta, t)\n",
+    "zdot = diff(z, t)\n",
+    "M = Matrix([\n",
+    "    [(ell**2/3)*m1, (ell/2)*m1*cos(theta)],\n",
+    "    [(ell/2)*m1*cos(theta), m1+m2]\n",
+    "])\n",
+    "display(Math(vlatex(M)))\n",
+    "C = Matrix([\n",
+    "    [(ell/2)*m1*g*sin(theta)],\n",
+    "    [(ell/2)*m1*diff(theta,t)**2*sin(theta)+F-b*diff(z,t)]\n",
+    "])\n",
+    "display(Math(vlatex(C)))\n",
+    "display(Math(vlatex(M.inv())))\n",
+    "qddot = M.inv()*C\n",
+    "f3 = qddot[0,0]\n",
+    "f4 = qddot[1,0]\n",
+    "# display(Math(vlatex(qddot)))\n",
+    "A = zeros(4,4)\n",
+    "A[0, 2] = 1\n",
+    "A[1, 3] = 1\n",
+    "A[2, 0] = simplify(diff(f3, theta))\n",
+    "display(A)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\frac{\\ell^{2} m_{1}}{3} & \\frac{\\ell m_{1} \\cos{\\left(\\theta \\right)}}{2}\\\\\\frac{\\ell m_{1} \\cos{\\left(\\theta \\right)}}{2} & m_{1} + m_{2}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{\\ell^{2} m_{1}}{3} & \\frac{\\ell m_{1}}{2}\\\\\\frac{\\ell m_{1}}{2} & m_{1} + m_{2}\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -91,7 +134,31 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\frac{\\ell g m_{1} \\sin{\\left(\\theta \\right)}}{2}\\\\F - b \\dot{z} + \\frac{\\ell m_{1} \\sin{\\left(\\theta \\right)} \\dot{\\theta}^{2}}{2}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{\\ell g m_{1} \\theta}{2}\\\\F - b \\dot{z}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{12 m_{1} + 12 m_{2}}{\\ell^{2} m_{1}^{2} + 4 \\ell^{2} m_{1} m_{2}} & - \\frac{6}{\\ell m_{1} + 4 \\ell m_{2}}\\\\- \\frac{6}{\\ell m_{1} + 4 \\ell m_{2}} & \\frac{4}{m_{1} + 4 m_{2}}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{\\ell g m_{1} \\cdot \\left(12 m_{1} + 12 m_{2}\\right) \\theta}{2 \\left(\\ell^{2} m_{1}^{2} + 4 \\ell^{2} m_{1} m_{2}\\right)} - \\frac{6 \\left(F - b \\dot{z}\\right)}{\\ell m_{1} + 4 \\ell m_{2}}\\\\- \\frac{3 \\ell g m_{1} \\theta}{\\ell m_{1} + 4 \\ell m_{2}} + \\frac{4 \\left(F - b \\dot{z}\\right)}{m_{1} + 4 m_{2}}\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -110,22 +177,26 @@
     "init_printing(use_latex=True)\n",
     "\n",
     "# importing these functions directly to make life a little easier and code a little more readable\n",
-    "from sympy import sin, cos, diff, Matrix, symbols, Function, pretty_print, simplify, init_printing, latex\n",
+    "from sympy import sin, cos, diff, Matrix, zeros, symbols, Function, pretty_print, simplify, init_printing, latex\n",
     "\n",
     "t, m1, m2, ell, g, F, b = symbols('t, m1, m2, ell, g, F, b')\n",
     "theta = sp.Function('theta')(t)\n",
     "z = sp.Function('z')(t)\n",
-    "\n",
+    "thetadot = diff(theta, t)\n",
+    "zdot = diff(z, t)\n",
     "M = Matrix([\n",
-    "    [(ell**2/3)*m1, (ell/2)*m1*cos(theta)],\n",
-    "    [(ell/2)*m1*cos(theta), m1+m2]\n",
+    "    [(ell**2/3)*m1, (ell/2)*m1],\n",
+    "    [(ell/2)*m1, m1+m2]\n",
     "])\n",
     "display(Math(vlatex(M)))\n",
     "C = Matrix([\n",
-    "    [(ell/2)*m1*g*sin(theta)],\n",
-    "    [(ell/2)*m1*diff(theta,t)**2*sin(theta)+F-b*diff(z,t)]\n",
+    "    [(ell/2)*m1*g*theta],\n",
+    "    [F-b*diff(z,t)]\n",
     "])\n",
-    "display(Math(vlatex(C)))"
+    "display(Math(vlatex(C)))\n",
+    "display(Math(vlatex(M.inv())))\n",
+    "qddot = M.inv()*C\n",
+    "display(Math(vlatex(qddot)))"
    ]
   }
  ],
